reference module update
